finished feature 2 decided to cancel feature 3 and fixed the drag clicking on desktop and touch on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html {
   border: 0;
   padding: 0;
   margin: 0;
+  user-select: none;
 }
 
 body {
@@ -31,7 +32,6 @@ main {
 
 main > h1 {
   text-align: center;
-  /* text-decoration: underline; */
   margin-bottom: 30px;
   border-bottom: 2px solid;
 }
@@ -67,6 +67,7 @@ button {
 }
 
 .board-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -81,4 +82,33 @@ button {
 
 .grid-items {
   outline: 1px gray;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.mode {
+  margin-bottom: 10px;
+  border-radius: 30px;
+  overflow: hidden;
+  border: 2px solid;
+  height: 40px;
+  display: flex;
+  align-items: stretch;
+  background-color: black;
+  padding: 1px;
+  gap: 2px;
+}
+.mode * {
+  flex: 1;
+  display: grid;
+  height: 100%;
+  place-items: center;
+}
+.selected {
+  background-color: rgb(198, 138, 198);
+  color: white;
 }
